<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_task_list"
    tools:context=".ui.task.detail.TaskDetailFragment">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="10dp"
        android:id="@+id/relative"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:paddingHorizontal="35dp">

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_name" />

        <TextView
            android:id="@+id/tv_task_name"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="53dp" />

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="119dp" />

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="162dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="185dp"
            android:textAlignment="viewStart" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="43dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/relative">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="134dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_button_create"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="134dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_button_create"
            android:backgroundTint="@color/btn_delete"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>