<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.task.create.TaskCreateFragment">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />


    <TextView
        android:id="@+id/tv_task_name"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <EditText
        android:id="@+id/et_task_name"
        style="@style/edit_text_content"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="10dp"
        android:layout_marginTop="9dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_name" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_task_name"
        android:text="@string/date"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toBottomOf="@+id/et_task_name" />

    <EditText
        android:id="@+id/et_date"
        style="@style/edit_text_content"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="10dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <ImageButton
        android:id="@+id/btn_calendar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:elevation="10dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/et_date"
        app:layout_constraintTop_toTopOf="@id/et_date"
        app:layout_constraintRight_toRightOf="@id/et_date"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/tv_description"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toBottomOf="@+id/et_date" />

    <EditText
        android:id="@+id/et_description"
        style="@style/edit_text_content"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="10dp"
        android:gravity="start"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="9dp"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_description"
        android:layout_marginHorizontal="66dp"
        android:background="@drawable/custom_button_create"
        android:text="@string/create"
        android:layout_marginTop="52dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />


</androidx.constraintlayout.widget.ConstraintLayout>